// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatInput /> accepts a value prop of type number 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  value={3.2}
/>
`;

exports[`<FloatInput /> with a custom className 1`] = `
<input
  className="mui-mi-input-field custom-class"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  value=""
/>
`;

exports[`<FloatInput /> with no props 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  value=""
/>
`;

exports[`Float Input with custom placeholder 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test placeholder"
  value=""
/>
`;

exports[`Float input with required prop 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  required={true}
  value=""
/>
`;
